correct phone layout problem

--- a/hymnsAccordion3.css
+++ b/hymnsAccordion3.css
@@ -70,7 +70,7 @@ body {
 	max-width: 500px;
 
 	margin-inline: auto;
-	padding-inline: 1rem;
+	/* padding-inline: 1rem; */
 	display: flex;
 	gap: calc(var(--_panel-gap) * 2);
 	flex-direction: column;
@@ -84,11 +84,15 @@ body {
 	position: relative;
 	contain: content;
 	/* max-height: 100vh; */
+	/* width: 342px; phone width */
 }
 .wrapper.restrictHeight {
 	max-height: 100svh;
 }
-
+.liturgyPlan {
+	background-origin: blue;
+	/* width: 220%; */
+}
 .accordion {
 	display: flex;
 	flex-direction: column;
@@ -867,6 +871,7 @@ button.down.hidden {
 	--liturgyCategoriesTextShadow: rgb(17, 20, 194);
 	--linearGradient1: rgba(248, 251, 37, 0.89);
 	--linearGradient2: orange;
+	--borderColour: rgba(255, 255, 0, 0.3);
 	min-height: max-content;
 	height: fit-content;
 	/* width: 100%; */
@@ -881,8 +886,8 @@ button.down.hidden {
 	display: grid;
 	/* flex-direction: column; */
 	/* grid-template-rows: repeat(1, max-content); */
-	grid-template-rows: auto auto 1px auto;
-	grid-template-columns: 1fr;
+	grid-template-rows:;
+	grid-template-columns: 100%;
 	gap: calc(var(--_panel-gap) / 3f);
 	transition: 1s;
 	color: black;
@@ -914,16 +919,21 @@ button.down.hidden {
 	text-decoration-style: double;
 	font-family: var(--lavishFont);
 	font-size: var(--lavishSizeBig);
-	text-shadow: 1px 1px rgb(212, 195, 195);
+	text-shadow: 1px 1px rgb(163, 149, 215);
 }
 
 .liturgyPlan .flex-container {
+	border: solid var(--borderColour) 2px;
+	border-radius: 10px;
+	flex-wrap: wrap;
 	display: flex;
-	gap: 0.8rem;
+	gap: 0.4rem;
 	justify-content: center;
 	font-family: var(--lavishFont);
 	font-size: large;
 	align-items: baseline;
+	width: 100%;
+	height: fit-content;
 }
 .liturgyPlan .flex-container button {
 	box-shadow: none;
@@ -1026,8 +1036,9 @@ hr {
 	display: flex;
 	flex-direction: column;
 	min-height: 20rem;
-	gap: 0;
+	gap: 0rem;
 	align-items: center;
+	width: 100%;
 }
 .acclamations h4,
 .acclamations h6 {
@@ -1128,7 +1139,7 @@ hr {
 
 	left: 100%;
 	position: absolute;
-	transition: 1s;
+	transition: all 1s;
 
 	color: black;
 	text-align: center;
@@ -1143,7 +1154,7 @@ details#psalm[open] {
 	/* row-gap: 5px; */
 }
 details#psalm {
-	margin-bottom: 1rem;
+	/* margin-bottom: 1rem; */
 	font-family: var(--lavishFont);
 	/* color: darkblue; */
 	text-shadow: 1px 1px var(--liturgyCategoriesColour);
@@ -1151,17 +1162,23 @@ details#psalm {
 	align-items: baseline;
 	width: 100%;
 	/* background-color: blue; */
-	border: grey solid 1px;
+	border: var(--borderColour) solid 1px;
 	padding: 0.5rem;
+	border-radius: 10px;
+}
+details summary {
 	border-radius: 10px;
 }
 button:hover {
 	cursor: pointer;
-	transform: scale(1.1);
+	transform: scale(1.05);
 	color: white;
 	box-shadow: black 2px 2px 3px;
 }
-
+summary:hover {
+	cursor: pointer;
+	color: white;
+}
 details button {
 	width: 100%;
 	color: rgba(255, 255, 255, 0.797);
@@ -1233,11 +1250,13 @@ details#psalm .product__mediaPlayer div.container {
 }
 
 .alleluia {
-	border: grey solid 1px;
+	border: var(--borderColour) solid 1px;
 	padding: 0.5rem;
 	margin-block: 1rem;
 	border-radius: 10px;
 	width: 100%;
+	font-family: var(--lavishFont);
+	text-shadow: 1px 1px rgb(163, 149, 215);
 }
 .alleluia span {
 	text-transform: uppercase;
